Got tidyhydat working, made warning message for facet function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,setNames)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,head)
