--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,6 @@ Imports:
     stats,
     stringr,
     tibble,
-    tidyhydat,
     tidyr
 Suggests: 
     knitr,
@@ -26,5 +25,6 @@ Suggests:
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    tidyhydat
 LazyData: true
