--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,select)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(stats,median)
+importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(tibble,tibble)
