incorporating Dave feedback

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(temp_count_NAs)
 export(temp_monthly_mean_historical)
 export(total_annual_precip)
 import(ggplot2)
+importFrom(AquaCache,hydat_check)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
