--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Imports:
     stats,
     stringr,
     tibble,
-    tidyr
+    tidyr, 
+    AquaCache
+Remotes:
+    github::YukonWRB/AquaCache
 Suggests: 
     knitr,
     rmarkdown,
